[package]
name = "wrytaobevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = { version = "0.11.0", default-features = false, features = [
  "bevy_pbr",
  "tonemapping_luts",
  "ktx2",
  "zstd",
]}
raw-window-handle = "0.5.2"
wry = "0.30.0"
